--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -206,6 +206,7 @@
           display: block;
           color: inherit;
           text-decoration: none;
+
           &:hover {
             text-decoration: underline;
           }
@@ -372,5 +373,47 @@ form.gdpr-accept {
     .input-group-addon {
       cursor: pointer;
     }
+  }
+}
+
+.quote-box {
+  background-color: #e7e7e7;
+  line-height: 1.33333;
+  padding: 13px;
+  border-radius: 2px;
+  height: 133px;
+  position: relative;
+
+  blockquote {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    font-size: 1em;
+
+    &:before {
+      display: none;
+    }
+
+    p {
+      margin-top: 0;
+    }
+
+    footer {
+      margin-top: 5px;
+      font-size: 95%;
+      color: @gray-666;
+      line-height: 1.2;
+    }
+  }
+
+  &:before {
+    position: absolute;
+    right: 13px;
+    bottom: -30px;
+    font-size: 100px;
+    color: rgba(@gray-base, .09);
+    .icon;
+    content: @icon-quote;
+    transform: rotateY(180deg);
   }
 }
