--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -61,18 +61,13 @@ html:lang(en) .ku-branding-text {
 }
 
 @media all and (min-width: 992px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-
   /* IE11 only */
   .ku-branding-text {
     background-position: left bottom -10px;
   }
 }
 
-.breadcrumbs, .local-footer {
-  display: none;
-}
-
-.item .item-teaser {
+.breadcrumbs, .local-footer, .item .item-teaser {
   display: none;
 }
 
@@ -209,11 +204,7 @@ html:lang(en) .ku-branding-text {
   }
 }
 
-/* Usabilla user test */
 .brugertest {
-  background-color: #bddee2;
   border: 1px solid #ccc;
-  padding-left: 17px;
-  padding-bottom: 15px;
-  border-radius: 2px;
+  padding: 23px 22px !important;
 }
