--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -381,7 +381,7 @@ form.gdpr-accept {
   line-height: 1.33333;
   padding: 13px;
   border-radius: 2px;
-  height: 133px;
+  height: @gridbox3;
   position: relative;
 
   blockquote {
@@ -407,13 +407,13 @@ form.gdpr-accept {
   }
 
   &:before {
-    position: absolute;
-    right: 13px;
-    bottom: -30px;
     font-size: 100px;
     color: rgba(@gray-base, .09);
     .icon;
     content: @icon-quote;
     transform: rotateY(180deg);
+    position: absolute;
+    right: 13px;
+    bottom: -30px;
   }
 }
