--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -15,3 +15,24 @@
   {% endhighlight %}
   Use <code>&lt;div class=&quot;factbox factbox-left&quot;&gt;</code> in order to left align the fact box.
 </div>
+<div class="bs-docs-section">
+  <h1 id="ku-quoteboxes" class="page-header">KU quote box</h1>
+  <p>Component for boxes with quotes. Use in grid pages.</p>
+  <div class="bs-example" data-example-id="ku-quoteboxes">
+    <div class="quote-box">
+      <blockquote>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+      </blockquote>
+    </div>
+  </div>
+  {% highlight html %}
+  <div class="quote-box">
+    <blockquote>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+      <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
+  </div>
+  {% endhighlight %}
+  The quote box has a minimum height of 133px.
+</div>
