--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -381,7 +381,7 @@ form.gdpr-accept {
   line-height: 1.33333;
   padding: 13px;
   border-radius: 2px;
-  height: @gridbox3;
+  min-height: @gridbox3;
   position: relative;
 
   blockquote {
