--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -389,6 +389,7 @@ form.gdpr-accept {
     margin: 0;
     width: 100%;
     font-size: 1em;
+    float: none;
 
     &:before {
       display: none;
