--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -404,7 +404,10 @@ form.gdpr-accept {
       margin-top: 5px;
       font-size: 95%;
       color: @gray-666;
-      line-height: 1.2;
+      line-height: 1.3333;
+    }
+    cite {
+      display: block;
     }
   }
 
