--- a/docs/_includes/local-footer.html
+++ b/docs/_includes/local-footer.html
@@ -9,7 +9,7 @@
         {% else %}
           <a href="http://www.kommunikation.ku.dk">Kommunikation</a><br>
           <a href="http://www.ku.dk/">Københavns Universitet</a><br>
-          Nørregade 10, Postboks 2177<br>1017 København K<br>
+          Nørregade 10,<br>1165 København K<br>
         {% endif %}
       </address>
     </div>
