--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -165,6 +165,12 @@ p[align="right"] {
     content: '\2014 \00A0';
   }
 }
+
+.newslettertable {
+  p, ul, ol, li, td {
+    font-size: 13px!important;
+  }
+}
 // Remove strong font-weight in accordion headers
 
 .panel-accordion > .panel-heading .panel-title a > strong {
