--- a/docs/assets/css/doctypes/newsletter.css
+++ b/docs/assets/css/doctypes/newsletter.css
@@ -17,7 +17,7 @@ body.Newsletter .right-side .panel-body {
   bottom: -2px;
 }
 
-.newslettertable h1 {
+.Newsletter h1 {
   margin-bottom: 10px!important;
 }
 
