--- a/docs/assets/css/doctypes/newsletter.css
+++ b/docs/assets/css/doctypes/newsletter.css
@@ -18,7 +18,26 @@ body.Newsletter .right-side .panel-body {
 }
 
 .Newsletter h1 {
-  margin-bottom: 10px!important;
+  margin-bottom: 10px !important;
+}
+
+.Newsletter h2 {
+  border-bottom: 0 !important;
+  font-family: inherit !important;
+  font-size: 22.1px !important;
+  font-weight: 400 !important;
+  margin-top: 19px !important;
+  margin-bottom: 10px !important;
+}
+
+.Newsletter h3 {
+  font-size: initial !important;
+  font-weight: 600 !important;
+  color: initial !important;
+  font-family: inherit !important;
+  font-size: 17.42px !important;
+  margin: initial;
+  padding: initial !important;
 }
 
 .newslettertable p, .newslettertable ul, .newslettertable ol, .newslettertable li, .newslettertable td {
