--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -159,7 +159,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column],
 .triple-column [class*=column],
 .two-one-column .column2 {
   .tiles-y {
-    .tilebox {
+    .tilebox, .tile-link {
       flex-direction: column;
       padding: 0 0 10px;
       margin-bottom: 23px;
