--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -16,7 +16,6 @@
       }
     }
   }
-
   @media all and (min-width: @screen-xs) {
     &.tiles-x {
       .tilebox {
@@ -31,25 +30,6 @@
       opacity: 1;
     }
   }
-}
-
-.tile-link {
-  color: @text-color!important;
-  text-decoration: none!important;
-  &:extend(.stretched-link);
-  // &:after {
-  //   color: initial;
-  //   text-decoration: none;
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   z-index: 1;
-  //   pointer-events: auto;
-  //   content: "";
-  //   background-color: rgba(@gray-base, 0);
-  // }
 }
 
 .tilebox {
@@ -81,14 +61,18 @@
   .tiles-x-layout();
 }
 
+.tile-link {
+  display: flex;
+  position: relative;
+  color: initial;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+}
+
 .tiles-y {
   .tile-link {
-    display: flex;
     flex-direction: row-reverse;
-    width: 100%;
-    position: relative;
-    color: initial;
-    text-decoration: none;
 
     &:hover {
       h3 {
@@ -102,6 +86,7 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid @gray;
+
     & + .tilebox {
       padding-top: 10px;
     }
@@ -152,13 +137,14 @@
 }
 //style for single and double column spans
 
-body:not(.FullWidthFrontpage) .double-column [class*=column],
 .one-two-column .column1,
 .quad-column [class*=column],
 .triple-column [class*=column],
-.two-one-column .column2 {
+.two-one-column .column2,
+body:not(.FullWidthFrontpage) .double-column [class*=column] {
   .tiles-y {
-    .tilebox, .tile-link {
+    .tile-link,
+    .tilebox {
       flex-direction: column;
       padding: 0 0 10px;
       margin-bottom: 23px;
