--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -64,7 +64,7 @@
 .tile-link {
   display: flex;
   position: relative;
-  color: initial;
+  color: initial!important;
   text-decoration: none;
   width: 100%;
   height: 100%;
