--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -18,6 +18,7 @@
 
       .tile-img {
         img {
+          object-fit: cover;
           backface-visibility: hidden;
           transform: scale3d(1.02, 1.02, 1.02) translateZ(0);
         }
