--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -98,12 +98,9 @@
 
   .tile-img {
     flex: none;
-    float: right;
+    //float: right;
     margin-bottom: 10px;
 
-    img {
-      object-fit: cover;
-    }
   }
 }
 @media all and (min-width: @screen-xs) {
@@ -119,6 +116,7 @@
 
       img {
         width: 165px;
+        object-fit: cover;
       }
     }
   }
@@ -132,10 +130,9 @@
       .tile-img {
         flex: 0 0 50%;
       }
-
-      .tile-body {
-        display: block;
-      }
+      // .tile-body {
+      //   display: block;
+      // }
     }
   }
 }
@@ -178,7 +175,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
         display: block;
 
         .tile-img {
-          float: right;
+          // float: right;
           margin-bottom: 7px;
         }
       }
@@ -195,6 +192,25 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
 
     .tile-body {
       display: block;
+    }
+  }
+}
+
+.single-column {
+  .tiles-x {
+    &:not(.tiles) {
+      .tile-link,
+      .tilebox {
+        flex-direction: row-reverse;
+      }
+
+      .tile-img {
+        flex: 0 0 50%;
+      }
+
+      .tile-body {
+        display: block;
+      }
     }
   }
 }
