--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -100,7 +100,6 @@
     flex: none;
     //float: right;
     margin-bottom: 10px;
-
   }
 }
 @media all and (min-width: @screen-xs) {
@@ -163,6 +162,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
       img {
         width: 100%;
         object-fit: cover;
+        flex: none;
       }
     }
   }
@@ -206,6 +206,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
 
       .tile-img {
         flex: 0 0 50%;
+        display: flex;
       }
 
       .tile-body {
