--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -16,9 +16,18 @@
       }
     }
   }
+  // @media all and (min-width: @screen-sm) {
+  //   &.tiles-x {
+  //     .tilebox {
+  //       height: @gridbox1;
+  //       width: @default-col-width;
+  //     }
+  //   }
+  // }
   @media all and (min-width: @screen-sm) {
     &.tiles-x {
       .tilebox {
+        height: @gridbox1;
         width: @default-col-width;
       }
     }
