--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -147,7 +147,7 @@
   background-attachment: fixed;
   background-size: cover;
   background-position: 50% 0;
-  box-shadow: none;
+  // box-shadow: none;
 
   .block-content {
     padding: 15px;
