--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -136,7 +136,7 @@
 
   .single-column {
     .tiles-x {
-      &:not(.tiles) {
+      &:not(.tiles-plugin) {
         .tile-link,
         .tilebox {
           flex-direction: row-reverse;
