--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -143,7 +143,7 @@
         }
 
         .tile-img {
-          flex: 0 0 50%;
+          flex: 0 0 calc(50% - @grid-gutter-width);
           display: flex;
         }
 
