--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -16,7 +16,6 @@
       }
     }
   }
-
   @media all and (min-width: @screen-sm) {
     &.tiles-x {
       .tilebox {
@@ -31,27 +30,6 @@
       // reveal when ready
       opacity: 1;
     }
-  }
-}
-
-.tilebox {
-  .header-small {
-    font-weight: 700;
-    color: @gray-666;
-    text-transform: uppercase;
-    letter-spacing: 0.4px;
-    margin: 0 0 5px;
-
-    .date {
-      float: right;
-      padding-left: 5px;
-    }
-  }
-
-  h3 {
-    line-height: 1.3;
-    margin-top: 0;
-    color: @text-color;
   }
 }
 
@@ -77,49 +55,11 @@
 }
 
 .tiles-y {
-  .tile-link {
-    flex-direction: row-reverse;
-
-    &:hover {
-      h3 {
-        text-decoration: underline;
-      }
-    }
-  }
-
-  .tilebox {
-    padding-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid @gray;
-
-    & + .tilebox {
-      padding-top: 10px;
-    }
-  }
-
-  .tile-img {
-    flex: none;
-    //float: right;
-    margin-bottom: 10px;
-  }
+  .tiles-y-layout();
 }
 @media all and (min-width: @screen-sm) {
   .tiles-y {
-    .tilebox {
-      flex-direction: row-reverse;
-    }
-
-    .tile-img {
-      margin-left: 10px;
-      flex: 0 0 165px;
-      margin-bottom: 0;
-
-      img {
-        width: 165px;
-        object-fit: cover;
-      }
-    }
+    .tiles-y-desktop-layout();
   }
 
   .double-column [class*=column] {
