--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -33,10 +33,6 @@
   }
 }
 
-.tile-content {
-  position: relative;
-}
-
 .tiles-x {
   .tiles-x-layout();
 }
@@ -57,6 +53,15 @@
 .tiles-y {
   .tiles-y-layout();
 }
+
+.tile-header {
+  h3 {
+    line-height: 1.3;
+    margin-top: 0;
+    color: @text-color;
+  }
+}
+
 @media all and (min-width: @screen-sm) {
   .tiles-y {
     .tiles-y-desktop-layout();
