--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -1,7 +1,6 @@
 /*
 * KU tiles mixin
 */
-
 .tiles-x-layout() {
   // Tiles format
   .tilebox {
@@ -39,12 +38,6 @@
         float: right;
         padding-left: 5px;
       }
-    }
-
-    h3 {
-      line-height: 1.3;
-      margin-top: 0;
-      color: @text-color;
     }
   }
 
@@ -97,6 +90,10 @@
   .tile-img {
     flex: none;
     margin-bottom: 10px;
+  }
+
+  .header-small {
+    display: none;
   }
 }
 
