--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -127,6 +127,10 @@
   //   right: 2%;
   //   bottom: 5%;
   // }
+  .no-bg {
+    background: none;
+    box-shadow: none;
+  }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 only in order to understand vertical alignment */
