--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -182,17 +182,19 @@
       font-size: 18px;
       padding: 30px 0;
     }
-
-    .no-bg {
-      background: none;
-      box-shadow: none;
-    }
   }
 
   .block-bg {
     .block-content {
       padding: 30px;
       box-shadow: 0 1px 8px rgba(@gray-base, .1), 0 16px 48px rgba(@gray-base, .1), 0 24px 60px rgba(@gray-base, .1);
+    }
+  }
+
+  .campaign-block {
+    .no-bg {
+      background: none;
+      box-shadow: none;
     }
   }
 }
