--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -14,7 +14,8 @@
     transition: box-shadow 0.2s ease-out;
 
     &:hover {
-      box-shadow: 0 8px 10px 0 rgba(38, 38, 38, .2), 0 6px 13px 0 rgba(38, 38, 38, .19);
+      //box-shadow: 0 8px 10px 0 rgba(38, 38, 38, .2), 0 6px 13px 0 rgba(38, 38, 38, .19);
+      box-shadow: 0 8px 10px 0 rgba(60, 60, 60, .1),0 2px 6px 0 rgba(64, 64, 64, .19);
 
       .tile-img {
         img {
