--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -27,6 +27,14 @@
         </blockquote>
       </div>
     </div>
+    <div class="col-sm-12 col-md-8">
+      <div class="quote-box">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas nulla eu scelerisque placerat. Morbi dignissim et dui pharetra consequat. Sed sit amet pharetra lectus.</p>
+          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+        </blockquote>
+      </div>
+    </div>
   </div>
   {% highlight html %}
   <div class="quote-box">
