--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -68,8 +68,6 @@
     color: @text-color;
   }
 }
-
-
 @media all and (min-width: @screen-sm) {
   .tiles-y {
     .tiles-y-desktop-layout();
@@ -175,6 +173,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
   }
 }
 @media (max-width: @screen-xs-max) {
+  .FullWidthFrontpage .triple-column,
   .double-column {
     .tile-body {
       display: block;
