--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -84,7 +84,8 @@
       }
     }
   }
-
+}
+@media all and (min-width: @screen-md) {
   .single-column {
     .tiles-x {
       height: @gridbox1;
@@ -174,7 +175,8 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
 }
 @media (max-width: @screen-xs-max) {
   .FullWidthFrontpage .triple-column,
-  .double-column {
+  .double-column,
+  .single-column .tiles-x:not(.tiles-plugin) {
     .tile-body {
       display: block;
     }
