--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -62,7 +62,9 @@
 }
 
 .tile-header {
-  h3 {
+  h2 {
+    font-size: 17.42px;
+    font-weight: 600;
     line-height: 1.3;
     margin-top: 0;
     color: @text-color;
@@ -97,8 +99,9 @@
         }
 
         .tile-header {
-          h3 {
+          h2 {
             font-size: 26px;
+            font-weight: 600;
           }
         }
 
