Tiles media query

--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -67,7 +67,6 @@
     font-weight: 600;
     line-height: 1.3;
     margin-top: 0;
-    color: @text-color;
   }
 }
 @media all and (min-width: @screen-sm) {
@@ -162,7 +161,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
     }
   }
 }
-@media all and (min-width: @screen-sm) {
+@media all and (min-width: @screen-md) {
   .FullWidthFrontpage .triple-column,
   .double-column {
     .tiles-x {
