--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -175,7 +175,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
     }
   }
 }
-@media (max-width: @screen-xs-max) {
+@media (max-width: @screen-sm-max) {
   .FullWidthFrontpage .triple-column,
   .double-column,
   .single-column .tiles-x:not(.tiles-plugin) {
