--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -71,7 +71,7 @@
     flex-direction: row-reverse;
 
     &:hover {
-      h2 {
+      .tile-header {
         text-decoration: underline;
       }
     }
