--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -159,7 +159,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
 }
 @media all and (min-width: @screen-md) {
   .FullWidthFrontpage .triple-column,
-  .double-column {
+  .double-column, .single-column {
     .tiles-x {
       .tilebox {
         height: 367px;
