--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -159,11 +159,10 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
 }
 @media all and (min-width: @screen-md) {
   .FullWidthFrontpage .triple-column,
-  .double-column, .single-column {
+  .double-column,
+  .single-column {
     .tiles-x {
-      .tilebox {
-        height: 367px;
-      }
+      height: 367px;
 
       .tile-body {
         display: block;
