--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -162,7 +162,7 @@ body:not(.FullWidthFrontpage) .double-column [class*=column] {
   .FullWidthFrontpage .triple-column,
   .double-column,
   .single-column {
-    .tiles-x {
+    .tiles-x:not(.tiles-plugin) {
       height: 367px;
 
       .tile-body {
