--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -75,7 +75,7 @@
   .double-column [class*=column] {
     .tiles-x {
       .tilebox {
-        width: 100%;
+        height: 100%;
       }
 
       .tile-img {
