--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -99,6 +99,7 @@
         .tile-header {
           font-size: 26px;
           font-weight: 600;
+          margin-top: 20px;
         }
 
         .tile-img {
