--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -53,19 +53,32 @@
   }
 }
 
+.tile-header {
+  font-size: 17.42px;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-top: 0;
+}
+
+.header-small {
+  font-weight: 700;
+  color: @gray-666;
+  text-transform: uppercase;
+  letter-spacing: 0.4px;
+  margin-bottom: 0;
+
+  .date {
+    float: right;
+    padding-left: 5px;
+  }
+}
+
 .tiles-x {
   .tiles-x-layout();
 }
 
 .tiles-y {
   .tiles-y-layout();
-}
-
-.tile-header {
-  font-size: 17.42px;
-  font-weight: 600;
-  line-height: 1.3;
-  margin-top: 0;
 }
 @media all and (min-width: @screen-sm) {
   .tiles-y {
