--- a/docs/assets/css/doctypes/newsletter.css
+++ b/docs/assets/css/doctypes/newsletter.css
@@ -54,3 +54,7 @@ p, ul, ol, li, td {
   height: 650px;
   overflow: auto;
 }
+
+#globalfooter ul.footerlinks li .icon-padlock:before {
+  color: #fff;
+}
