--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -62,7 +62,7 @@
 
 .header-small {
   font-weight: 700;
-  color: @gray-666;
+  color: @gray-light;
   text-transform: uppercase;
   letter-spacing: 0.4px;
   margin-bottom: 0;
