--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -231,6 +231,11 @@
   background: transparent url("https://cms.ku.dk/grafik/beredskab.png") no-repeat center left;
   background-size: 100px;
 
+  h2 {
+    margin-top: 0;
+    font-size: 26px;
+  }
+
   p {
     font-size: 16px;
   }
