--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -225,15 +225,24 @@
 }
 
 #warning-banner-inner {
+  text-align: left;
+  max-width: 1018px;
   margin: 0 auto;
-  padding: 15px 15px 15px 115px;
-  max-width: 874px;
-  background: transparent url("https://cms.ku.dk/grafik/beredskab.png") no-repeat center left;
-  background-size: 100px;
+  padding: 10px 0;
+  // background: transparent url("https://cms.ku.dk/grafik/beredskab.png") no-repeat center left;
+  // background-size: 100px;
 
-  h2 {
+  h1 {
+    padding: 0;
+    margin: 0 0 10px 0;
+    font-size: 40px;
     margin-top: 0;
+    font-weight: 400;
+  }
+  h2 {
     font-size: 26px;
+    font-weight: 400;
+    margin: 0 0 10px 0;
   }
 
   p {
@@ -242,9 +251,7 @@
 }
 
 #warning-banner-header {
-  font-size: 40px;
-  margin: 0;
-  padding: 0;
+  display: none;
 }
 // Faktaboks
 
