--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -300,6 +300,25 @@ html:lang(en) .ku-branding-text {
 #podcast {
   height: 289px;
 }
+#podcast .gridbox.size1.with-img .box1 {
+  padding: 10px;
+}
+
+#podcast .gridbox.size1.with-img .box1 .header {
+  color: #4a4949;
+  font-size: 1.3em;
+  font-weight: 700;
+  line-height: 1.3em;
+  padding: 0;
+}
+
+#podcast .gridbox.size1.with-img .box1 .header-small {
+  margin: 5px 0;
+}
+
+#podcast .single-column .column1 .size1.with-img:hover .header>span {
+  background: none;
+}
 
 @media all and (min-width: 768px) {
   .slick-slider {
@@ -355,34 +374,7 @@ html:lang(en) .ku-branding-text {
     width: 55%;
   }
 
-  #podcast .slick-list {
-    margin-right: -26px;
-  }
-
-  #podcast .slick-slide {
-    width: 235px !important;
-    margin-right: 26px;
-  }
-}
-
-#podcast .gridbox.size1.with-img .box1 {
-  padding: 10px;
-}
-
-#podcast .gridbox.size1.with-img .box1 .header {
-  color: #4a4949;
-  font-size: 1.3em;
-  font-weight: 700;
-  line-height: 1.3em;
-  padding: 0;
-}
-
-#podcast .gridbox.size1.with-img .box1 .header-small {
-  margin: 5px 0;
-}
-
-@media all and (min-width: 768px) {
-  #podcast .single-column .column1 .size1 {
+ .single-column .column1  #podcast .size1 {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
@@ -390,7 +382,12 @@ html:lang(en) .ku-branding-text {
     border-bottom: 0;
   }
 
-  #podcast .single-column .column1 .size1.with-img:hover .header>span {
-    background: none;
+  #podcast .slick-list {
+    margin-right: -26px;
+  }
+
+  #podcast .slick-slide {
+    width: 235px !important;
+    margin-right: 26px;
   }
 }
