--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -297,14 +297,15 @@ html:lang(en) .ku-branding-text {
   /* .slick-list{padding:0 20% 0 0;} */
 }
 
-#podcast {
+.single-column .column1 #podcast {
   height: 289px;
 }
-#podcast .gridbox.size1.with-img .box1 {
+
+.single-column .column1 #podcast .gridbox.size1.with-img .box1 {
   padding: 10px;
 }
 
-#podcast .gridbox.size1.with-img .box1 .header {
+.single-column .column1 #podcast .gridbox.size1.with-img .box1 .header {
   color: #4a4949;
   font-size: 1.3em;
   font-weight: 700;
@@ -312,11 +313,11 @@ html:lang(en) .ku-branding-text {
   padding: 0;
 }
 
-#podcast .gridbox.size1.with-img .box1 .header-small {
+.single-column .column1 #podcast .gridbox.size1.with-img .box1 .header-small {
   margin: 5px 0;
 }
 
-#podcast .single-column .column1 .size1.with-img:hover .header>span {
+.single-column .column1 #podcast .size1.with-img:hover .header>span {
   background: none;
 }
 
@@ -374,7 +375,7 @@ html:lang(en) .ku-branding-text {
     width: 55%;
   }
 
- .single-column .column1  #podcast .size1 {
+  .single-column .column1 #podcast .size1 {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
@@ -382,11 +383,11 @@ html:lang(en) .ku-branding-text {
     border-bottom: 0;
   }
 
-  #podcast .slick-list {
+  .single-column .column1 #podcast .slick-list {
     margin-right: -26px;
   }
 
-  #podcast .slick-slide {
+  .single-column .column1 #podcast .slick-slide {
     width: 235px !important;
     margin-right: 26px;
   }
