--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -94,7 +94,6 @@
 
   img {
     @media (min-width: @screen-sm) {
-      //min-height: 100%;
       height: 100%;
       max-width: none;
     }
@@ -207,7 +206,6 @@
   }
 
   &:focus {
-    //visibility: visible;
     .tab-focus();
     outline-offset: -1px;
   }
@@ -344,6 +342,7 @@
     width: 100%;
     height: auto;
     letter-spacing: 0.7px;
+    text-decoration: none;
     line-height: @line-height-small;
     padding: 10px;
     @media (max-width: @screen-sm) {
