--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -102,7 +102,7 @@
 
         &[data-heading='open'] {
           margin-top: 20px;
-          margin-bottom: 3px;
+          // margin-bottom: 3px;
         }
       }
     }
@@ -153,7 +153,7 @@
 
   .social-item {
     display: inline-block;
-    margin: 0.5em 0.3em 0 0;
+    margin: 7px 4px 0 0;
     background-color: @ku-footer-icon-bg;
     border-radius: 50%;
 
