--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -153,7 +153,7 @@
 
   .social-item {
     display: inline-block;
-    margin: 7px 4px 0 0;
+    margin: @grid-gutter-by-half 4px 0 0;
     background-color: @ku-footer-icon-bg;
     border-radius: 50%;
 
@@ -331,7 +331,7 @@
       width: 100%;
 
       .social-item {
-        margin: 13px 16px 0 0;
+        margin: 7px 16px 0 0;
 
         .social-icon {
           font-size: 32px;
