--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -141,7 +141,6 @@ body:not(.FullWidthFrontpage) .double-column {
     .tilebox {
       flex-direction: column;
       padding: 0 0 10px;
-      // margin-bottom: 23px;
     }
 
     .tile-content {
@@ -155,6 +154,7 @@ body:not(.FullWidthFrontpage) .double-column {
 
       img {
         width: 100%;
+        float: none;
       }
     }
   }
