--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -93,12 +93,12 @@
 
   .tile-img {
     margin-left: 10px;
-    flex: 0 0 165px;
+    flex: 0 0 185px;
     margin-bottom: 0;
 
     img {
       width: 165px;
-      object-fit: cover;
+      float: right;
     }
   }
 }
