--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -65,7 +65,7 @@
   color: @gray-light;
   text-transform: uppercase;
   letter-spacing: 0.4px;
-  margin-bottom: 0;
+  margin-bottom: 5px;
 
   .date {
     float: right;
