--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -117,9 +117,17 @@
           margin-top: 20px;
         }
 
+        .date {
+          margin-right: 0;
+        }
+
         .tile-img {
           flex: 0 0 calc(50% - @grid-gutter-by-half);
           display: flex;
+        }
+
+        .tile-content {
+          padding-right: @grid-gutter-width;
         }
 
         .tile-body {
