--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -116,6 +116,7 @@
 
         .tile-body {
           display: block;
+          font-size: 16px;
         }
       }
     }
@@ -178,13 +179,13 @@ body:not(.FullWidthFrontpage) .double-column {
     }
   }
 
-  .single-column {
-    .tiles-x:not(.tiles-plugin) {
-      .tile-body {
-        display: block;
-      }
-    }
-  }
+  // .single-column {
+  //   .tiles-x:not(.tiles-plugin) {
+  //     .tile-body {
+  //       display: block;
+  //     }
+  //   }
+  // }
 }
 @media (max-width: @screen-sm-max) {
   .FullWidthFrontpage .triple-column,
